<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"

    android:orientation="vertical"
    tools:context="net.simplifiedcoding.userregistrationapp.ActivityLogin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#3bd2c6c6"
        android:paddingBottom="165dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="Snap'N'Split"
            android:textSize="40dp"
            style="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Title"
            android:layout_gravity="center"
            android:paddingBottom="40dp"
            android:paddingTop="70dp"
            android:layout_weight="1" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/string_username"
            android:layout_weight="1" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:id="@+id/username"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/textview_password"
            android:layout_weight="1" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:inputType="textPassword"
            android:id="@+id/password"
            android:layout_weight="1"
            android:paddingBottom="5dp"/>
        <Button
            android:layout_width="300dp"
            android:layout_height="0dp"
            android:text="@string/string_user_login"
            android:id="@+id/buttonUserLogin"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            android:background="#7edada"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="Forgot password?"
            android:layout_gravity="center"
            android:paddingTop="5dp"
            android:layout_weight="1" />

    </LinearLayout>
</ScrollView>